'Pay' modal for upgrading to Pro/Plus

--- a/src/app/modules/wire/v2/creator/form/form.component.html
+++ b/src/app/modules/wire/v2/creator/form/form.component.html
@@ -1,5 +1,11 @@
 <div class="m-wireCreator__form m-formWrapper">
-  <div class="m-wireCreatorForm__tabs m-tabs__container">
+  <!-- ---------------------------------- -->
+  <!-- CURRENCY TABS (NON-UPGRADES) -->
+  <!-- ---------------------------------- -->
+  <div
+    class="m-wireCreatorForm__tabs m-tabs__container"
+    *ngIf="!(service.isUpgrade$ | async)"
+  >
     <div class="m-tabs__tab">
       <a
         [class.m-tabs__tab--selected]="(service.type$ | async) === 'tokens'"
@@ -37,8 +43,110 @@
     </div>
   </div>
 
+  <!-- ---------------------------------- -->
+  <!-- FORM FIELDSET -->
+  <!-- ---------------------------------- -->
   <div class="m-wireCreatorForm__fieldset">
-    <div class="m-wireCreatorForm__fields">
+    <!-- ---------------------------------- -->
+    <!-- CURRENCY TOGGLE (UPGRADES) -->
+    <!-- ---------------------------------- -->
+    <div class="m-wireCreatorForm__fields" *ngIf="service.isUpgrade$ | async">
+      <div class="m-wireCreatorForm__field">
+        <div class="m-wireCreatorForm__field">
+          <div class="m-wireCreatorForm__toggleContainer">
+            <span
+              class="m-wireCreatorForm__toggleLabel"
+              i18n="currency|@@COMMON__USD"
+              >USD</span
+            >
+
+            <span class="m-wireCreatorForm__toggle"
+              ><m-toggle
+                leftValue="usd"
+                rightValue="tokens"
+                [mModel]="service.type$ | async"
+                (mModelChange)="service.setType($event)"
+              ></m-toggle
+            ></span>
+
+            <span
+              class="m-wireCreatorForm__toggleLabel"
+              i18n="currency|@@COMMON__TOKENS"
+              >Tokens</span
+            >
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- ---------------------------------- -->
+    <!-- TOGGLE: UPGRADE INTERVAL -->
+    <!-- ---------------------------------- -->
+    <div class="m-wireCreatorForm__fields" *ngIf="service.isUpgrade$ | async">
+      <div class="m-wireCreatorForm__field">
+        <div class="m-wireCreatorForm__intervalToggleContainer">
+          <div
+            class="m-wireCreatorForm__intervalOption"
+            [class.m-wireCreatorForm__intervalOption--selected]="
+              (service.upgradeInterval$ | async) === 'yearly'
+            "
+            (click)="service.setUpgradeInterval('yearly')"
+          >
+            <div i18n="@@COMMON__ANNUALLY">Annually</div>
+            <div>
+              <ng-container *ngIf="(service.type$ | async) === 'usd'"
+                >$</ng-container
+              ><span>{{
+                (service.upgradePricingOptions$ | async)?.yearly / 12
+              }}</span>
+              <span
+                ><ng-container
+                  *ngIf="(service.type$ | async) === 'tokens'"
+                  i18n="currency|@@COMMON__TOKENS"
+                >
+                  tokens</ng-container
+                >
+                /
+                <ng-container i18n="@@COMMON__MONTH">month</ng-container></span
+              >
+            </div>
+          </div>
+          <div
+            class="m-wireCreatorForm__intervalOption"
+            (click)="service.setUpgradeInterval('monthly')"
+            [class.m-wireCreatorForm__intervalOption--selected]="
+              (service.upgradeInterval$ | async) === 'monthly'
+            "
+          >
+            <div i18n="@@COMMON__MONTHLY">Monthly</div>
+            <div>
+              <ng-container *ngIf="(service.type$ | async) === 'usd'"
+                >$</ng-container
+              >
+              <span>{{
+                (service.upgradePricingOptions$ | async)?.monthly
+              }}</span
+              ><span
+                ><ng-container
+                  *ngIf="(service.type$ | async) === 'tokens'"
+                  i18n="currency|@@COMMON__TOKENS"
+                >
+                  tokens</ng-container
+                >
+                /
+                <ng-container i18n="@@COMMON__MONTH">month</ng-container></span
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- ---------------------------------- -->
+    <!-- INPUT: AMOUNT -->
+    <!-- ---------------------------------- -->
+    <div
+      class="m-wireCreatorForm__fields"
+      *ngIf="!(service.isUpgrade$ | async)"
+    >
       <div class="m-wireCreatorForm__field">
         <label
           for="m-wireCreatorForm__amount"
@@ -71,44 +179,51 @@
         />
       </div>
     </div>
-
     <div class="m-wireCreatorForm__fields">
-      <!-- Type === tokens -->
+      <!--------------------------->
+      <!--IF CURRENCY : TOKENS-->
+      <!--------------------------->
       <ng-container *ngIf="(service.type$ | async) === 'tokens'">
-        <!-- Token wallet toggle -->
-        <div class="m-wireCreatorForm__field">
-          <div
-            class="m-wireCreatorForm__label"
-            i18n="@@WIRE_CREATOR_FORM__WALLET_TYPE"
-          >
-            Wallet Type
-          </div>
-
-          <div class="m-wireCreatorForm__toggleContainer">
-            <span
-              class="m-wireCreatorForm__toggleLabel"
-              i18n="@@COMMON__ONCHAIN"
-              >On-chain</span
+        <!--------------------------->
+        <!--TOGGLE : OFFCHAIN/ONCHAIN -->
+        <!--------------------------->
+        <ng-container *ngIf="!(service.isUpgrade$ | async)">
+          <div class="m-wireCreatorForm__field">
+            <div
+              class="m-wireCreatorForm__label"
+              i18n="@@WIRE_CREATOR_FORM__WALLET_TYPE"
             >
+              Wallet Type
+            </div>
 
-            <span class="m-wireCreatorForm__toggle"
-              ><m-toggle
-                leftValue="onchain"
-                rightValue="offchain"
-                [mModel]="service.tokenType$ | async"
-                (mModelChange)="service.setTokenType($event)"
-              ></m-toggle
-            ></span>
+            <div class="m-wireCreatorForm__toggleContainer">
+              <span
+                class="m-wireCreatorForm__toggleLabel"
+                i18n="@@COMMON__ONCHAIN"
+                >On-chain</span
+              >
 
-            <span
-              class="m-wireCreatorForm__toggleLabel"
-              i18n="@@COMMON__OFFCHAIN"
-              >Off-chain</span
-            >
+              <span class="m-wireCreatorForm__toggle"
+                ><m-toggle
+                  leftValue="onchain"
+                  rightValue="offchain"
+                  [mModel]="service.tokenType$ | async"
+                  (mModelChange)="service.setTokenType($event)"
+                ></m-toggle
+              ></span>
+
+              <span
+                class="m-wireCreatorForm__toggleLabel"
+                i18n="@@COMMON__OFFCHAIN"
+                >Off-chain</span
+              >
+            </div>
           </div>
-        </div>
+        </ng-container>
 
-        <!-- Token wallet balance -->
+        <!--------------------------->
+        <!--TOKEN WALLET BALANCE-->
+        <!--------------------------->
         <div class="m-wireCreatorForm__field">
           <div
             class="m-wireCreatorForm__label"
@@ -137,15 +252,25 @@
               <ng-container *ngIf="(service.tokenType$ | async) === 'onchain'">
                 {{ wallet.value.onchain.balance | number: '1.0-3' }}
               </ng-container>
+              <a
+                class="m-wireCreatorForm__topUpLink"
+                *ngIf="service.isUpgrade$ | async"
+                routerLink="/token"
+                i18n="@@WIRE_CREATOR_FORM__TOP_UP_WALLET"
+                >Top-up wallet</a
+              >
             </ng-template>
           </span>
         </div>
       </ng-container>
       <!--  End of type === tokens -->
-
-      <!-- Type === usd -->
+      <!--------------------------->
+      <!-- IF CURRENCY: USD -->
+      <!--------------------------->
       <ng-container *ngIf="(service.type$ | async) === 'usd'">
-        <!-- Card selector -->
+        <!--------------------------->
+        <!--SELECT BANK ACCOUNT/CARD-->
+        <!--------------------------->
         <div class="m-wireCreatorForm__field">
           <div
             class="m-wireCreatorForm__label"
@@ -160,13 +285,15 @@
         </div>
       </ng-container>
       <!--  End of type === usd -->
-
-      <!-- Recurring checkbox -->
+      <!--------------------------->
+      <!--CHECKBOX : RECURRING PAYMENTS-->
+      <!--------------------------->
       <div
         *ngIf="
-          service.canRecur(service.type$ | async, service.tokenType$ | async)
+          service.canRecur(service.type$ | async, service.tokenType$ | async) &&
+          !(service.isUpgrade$ | async)
         "
-        class="m-wireCreatorForm__field"
+        class="m-wireCreatorForm__field m-wireCreatorForm__field--recurring"
       >
         <label
           for="m-wireCreatorForm__recurring"
