--- a/src/app/modules/payments/select-card/select-card.component.html
+++ b/src/app/modules/payments/select-card/select-card.component.html
@@ -4,7 +4,7 @@
     (ngModelChange)="paymentMethodId = $event; selected.next(paymentMethodId)"
   >
     <option *ngFor="let card of paymentMethods" [value]="card.id">
-      {{ card.card_brand | uppercase }} *** {{ card.card_last4 }}
+      {{ card.card_brand | titlecase }} ***{{ card.card_last4 }} -
       {{ card.card_expires }}
     </option>
     <option value="new">Add a new card</option>
