--- a/src/app/modules/wire/v2/creator/toolbar/toolbar.component.html
+++ b/src/app/modules/wire/v2/creator/toolbar/toolbar.component.html
@@ -1,6 +1,6 @@
 <ng-template #typeLabel>
   <ng-container [ngSwitch]="service.type$ | async">
-    <ng-container *ngSwitchCase="'tokens'" i18n="@@CREATOR_TOOLBAR__OTHER"
+    <ng-container *ngSwitchCase="'tokens'" i18n="@@WIRE_CREATOR_TOOLBAR__OTHER"
       >{ service.amount$ | async, plural, =1 {token} other {tokens}
       }</ng-container
     >
@@ -17,13 +17,16 @@
 </ng-template>
 
 <div class="m-wireCreator__toolbar m-modalV2__toolbar">
-  <div class="m-wireCreatorToolbar__poweredBy">
+  <div
+    class="m-wireCreatorToolbar__poweredBy"
+    *ngIf="!(service.isUpgrade$ | async)"
+  >
     <span
       class="m-wireCreatorToolbarPoweredBy__text"
-      i18n="@@CREATOR_TOOLBAR__POWERED_BY"
+      i18n="@@WIRE_CREATOR_TOOLBAR__POWERED_BY"
       >Powered by</span
     >
-    <span class="m-wireCreatorToolbarPoweredBy__name">MindsPay</span>
+    <span class="m-wireCreatorToolbarPoweredBy__name" i18n>MindsPay</span>
   </div>
 
   <div class="m-wireCreatorToolbar__message">
@@ -44,18 +47,32 @@
     (click)="onSubmitClick($event)"
     data-cy="wire-v2-send"
   >
-    <ng-container
-      *ngIf="service.recurring$ | async; else noRecurringLabel"
-      i18n="@@CREATOR_TOOLBAR__SEND"
-    >
-      Send {{ service.amount$ | async | number: '1.0-6' }}
-      <ng-container *ngTemplateOutlet="typeLabel"></ng-container> monthly
-    </ng-container>
-    <ng-template #noRecurringLabel>
-      <ng-container i18n="@@CREATOR_TOOLBAR__SEND">
+    <ng-container *ngIf="!(service.isUpgrade$ | async)">
+      <ng-container
+        *ngIf="service.recurring$ | async; else noRecurringLabel"
+        i18n="@@WIRE_CREATOR_TOOLBAR__SEND"
+      >
         Send {{ service.amount$ | async | number: '1.0-6' }}
-        <ng-container *ngTemplateOutlet="typeLabel"></ng-container>
+        <ng-container *ngTemplateOutlet="typeLabel"></ng-container> monthly
       </ng-container>
-    </ng-template>
+      <ng-template #noRecurringLabel>
+        <ng-container i18n="@@WIRE_CREATOR_TOOLBAR__SEND">
+          Send {{ service.amount$ | async | number: '1.0-6' }}
+          <ng-container *ngTemplateOutlet="typeLabel"></ng-container>
+        </ng-container>
+      </ng-template>
+    </ng-container>
+    <ng-container
+      *ngIf="service.isUpgrade$ | async"
+      i18n="@@WIRE_CREATOR_TOOLBAR__SUBMIT_UPGRADE"
+    >
+      Upgrade to Minds<ng-container
+        *ngIf="(service.upgradeType$ | async) === 'plus'"
+        >+</ng-container
+      >
+      <ng-container *ngIf="(service.upgradeType$ | async) === 'pro'">
+        Pro</ng-container
+      >
+    </ng-container>
   </m-shadowboxSubmitButton>
 </div>
