--- a/src/app/modules/marketing/as-featured-in.component.scss
+++ b/src/app/modules/marketing/as-featured-in.component.scss
@@ -1,4 +1,4 @@
-@import '../../../foundation/grid-values';
+@import '../../foundation/grid-values';
 
 .m-marketing__asFeaturedIn {
   min-width: 320px;
