--- a/src/app/modules/marketing/marketing.component.scss
+++ b/src/app/modules/marketing/marketing.component.scss
@@ -1,5 +1,5 @@
 @import 'defaults';
-@import '../../../foundation/grid-values';
+@import '../../foundation/grid-values';
 
 m-marketing {
   display: block;
