--- a/src/app/modules/marketing/styles/style-4.scss
+++ b/src/app/modules/marketing/styles/style-4.scss
@@ -1,4 +1,4 @@
-@import '../../../../foundation/grid-values';
+@import '../../../foundation/grid-values';
 
 .m-marketing__main,
 .m-marketing__section {
