(feat): settings now translated

--- a/src/app/modules/settings-v2/account/email-notifications/email-notifications.component.html
+++ b/src/app/modules/settings-v2/account/email-notifications/email-notifications.component.html
@@ -1,3 +1,18 @@
+<m-settingsV2__header>
+  <div
+    class="m-settingsV2__headerLabel"
+    i18n="@@SETTINGS__NOTIFICATIONS__EMAIL__LABEL"
+  >
+    Email Notifications
+  </div>
+  <div
+    class="m-settingsV2__desc"
+    i18n="@@SETTINGS__NOTIFICATIONS__EMAIL__DESCRIPTION"
+  >
+    Control what email notifications you receive, and when.
+  </div>
+</m-settingsV2__header>
+
 <div *ngIf="!init" class="m-settingsV2__spinner">
   <div class="mdl-spinner mdl-js-spinner is-active" [mdl]></div>
 </div>
