--- a/src/app/modules/settings-v2/account/nsfw-content/nsfw-content.component.html
+++ b/src/app/modules/settings-v2/account/nsfw-content/nsfw-content.component.html
@@ -1,3 +1,15 @@
+<m-settingsV2__header>
+  <div
+    class="m-settingsV2__headerLabel"
+    i18n="@@SETTINGS__ACCOUNT__NSFW__LABEL"
+  >
+    NSFW Content
+  </div>
+  <div class="m-settingsV2__desc" i18n="@@SETTINGS__ACCOUNT__NSFW__DESCRIPTION">
+    Control how NSFW content is displayed in your newsfeed.
+  </div>
+</m-settingsV2__header>
+
 <form *ngIf="form" [formGroup]="form" class="m-formLayout--buttonRight">
   <div class="m-form__fieldsContainer">
     <div class="m-form__field--checkbox stretchedField">
