--- a/src/app/modules/settings-v2/account/share-buttons/share-buttons.component.html
+++ b/src/app/modules/settings-v2/account/share-buttons/share-buttons.component.html
@@ -1,3 +1,18 @@
+<m-settingsV2__header>
+  <div
+    class="m-settingsV2__headerLabel"
+    i18n="@@SETTINGS__ACCOUNT__SHAREBUTTONS__LABEL"
+  >
+    Share Buttons
+  </div>
+  <div
+    class="m-settingsV2__desc"
+    i18n="@@SETTINGS__ACCOUNT__SHAREBUTTONS__DESCRIPTION"
+  >
+    Control whether you see the share button overlay.
+  </div>
+</m-settingsV2__header>
+
 <form *ngIf="form" [formGroup]="form" class="m-formLayout--buttonRight">
   <div class="m-form__fieldsContainer">
     <div class="m-form__field--checkbox stretchedField">
