--- a/src/app/modules/settings-v2/other/delete-account/delete-account.component.html
+++ b/src/app/modules/settings-v2/other/delete-account/delete-account.component.html
@@ -1,3 +1,20 @@
+<m-settingsV2__header>
+  <div
+    class="m-settingsV2__headerLabel"
+    i18n="@@SETTINGS__OTHER__LEAVE__DELETE__LABEL"
+  >
+    Delete Account
+  </div>
+  <div
+    class="m-settingsV2__desc"
+    i18n="@@SETTINGS__OTHER__LEAVE__DELETE__DESCRIPTION"
+  >
+    Warning: This is not reversible and will result in permanent loss of your
+    channel and all of your data. Your channel will not be recoverable. Your
+    username will be released back to the public.
+  </div>
+</m-settingsV2__header>
+
 <form *ngIf="form" [formGroup]="form" class="m-formLayout--buttonLeft">
   <div class="m-form__fieldsContainer">
     <div class="m-form__field--checkbox stretchedField">
