--- a/src/app/modules/settings-v2/other/reported-content/reported-content.component.html
+++ b/src/app/modules/settings-v2/other/reported-content/reported-content.component.html
@@ -1,1 +1,16 @@
+<m-settingsV2__header>
+  <div
+    class="m-settingsV2__headerLabel"
+    i18n="@@SETTINGS__OTHER__CONTENTADMIN__REPORTED__LABEL"
+  >
+    Reported Content
+  </div>
+  <div
+    class="m-settingsV2__desc"
+    i18n="@@SETTINGS__OTHER__CONTENTADMIN__REPORTED__DESCRIPTION"
+  >
+    Oversee disciplinary measures taken on your posts and channel.
+  </div>
+</m-settingsV2__header>
+
 <m-settings--reported-content></m-settings--reported-content>
