--- a/src/app/modules/settings-v2/other/subscription-tiers/subscription-tiers.component.html
+++ b/src/app/modules/settings-v2/other/subscription-tiers/subscription-tiers.component.html
@@ -1,3 +1,19 @@
+<m-settingsV2__header>
+  <div
+    class="m-settingsV2__headerLabel"
+    i18n="@@SETTINGS__OTHER__PAIDCONTENT__SUBSCRIPTIONS__LABEL"
+  >
+    Subscription Tier Management
+  </div>
+  <div
+    class="m-settingsV2__desc"
+    i18n="@@SETTINGS__OTHER__PAIDCONTENT__SUBSCRIPTIONS__DESCRIPTION"
+  >
+    Define incentives for users to support your channel. These tiers will be
+    displayed on your channel's sidebar and wire screen.
+  </div>
+</m-settingsV2__header>
+
 <div class="m-formLayout--buttonRight">
   <div class="m-form__fieldsContainer">
     <m-wireV2__subscriptionTiers
