--- a/src/app/modules/settings-v2/security/two-factor/two-factor.component.html
+++ b/src/app/modules/settings-v2/security/two-factor/two-factor.component.html
@@ -1,3 +1,15 @@
+<m-settingsV2__header>
+  <div
+    class="m-settingsV2__headerLabel"
+    i18n="@@SETTINGS__SECURITY__2FA__LABEL"
+  >
+    Two-factor Authentication
+  </div>
+  <div class="m-settingsV2__desc" i18n="@@SETTINGS__SECURITY__2FA__DESCRIPTION">
+    Add an extra layer of security to your account by enabling 2FA.
+  </div>
+</m-settingsV2__header>
+
 <!-- <m-walletPhoneVerification></m-walletPhoneVerification> -->
 <m-settings--two-factor></m-settings--two-factor>
 <!-- You may disable 2FA at any point. If you’ve changed your mobile number, you will need to disable and re-enable 2FA. -->
