--- a/src/app/modules/settings-v2/account/autoplay-videos/autoplay-videos.component.html
+++ b/src/app/modules/settings-v2/account/autoplay-videos/autoplay-videos.component.html
@@ -1,15 +1,24 @@
-<div
-  class="m-settingsV2__desc"
-  i18n="@@AUTOPLAY_VIDEOS__CONTROL_AUTOPLAY_INFORMATION"
->
-  Control whether videos in your feed play automatically.
-  <ng-container *ngIf="!isPlus"
-    ><br /><br />This feature is only available to Plus users.
-    <a class="m-form__upgradeLink" routerLink="/plus" *ngIf="!isPlus"
-      >Upgrade to Plus</a
-    ></ng-container
+<m-settingsV2__header>
+  <div
+    class="m-settingsV2__headerLabel"
+    i18n="@@SETTINGS__ACCOUNT__AUTOPLAY__LABEL"
   >
-</div>
+    Autoplay Videos
+  </div>
+  <div
+    class="m-settingsV2__desc"
+    i18n="@@AUTOPLAY_VIDEOS__CONTROL_AUTOPLAY_INFORMATION"
+  >
+    Control whether videos in your feed play automatically.
+    <ng-container *ngIf="!isPlus"
+      ><br /><br />This feature is only available to Plus users.
+      <a class="m-form__upgradeLink" routerLink="/plus" *ngIf="!isPlus"
+        >Upgrade to Plus</a
+      ></ng-container
+    >
+  </div>
+</m-settingsV2__header>
+
 <form *ngIf="form" [formGroup]="form" class="m-formLayout--buttonRight">
   <div class="m-form__fieldsContainer">
     <div class="m-form__field--checkbox stretchedField">
