--- a/src/app/modules/settings-v2/account/language/language.component.html
+++ b/src/app/modules/settings-v2/account/language/language.component.html
@@ -1,3 +1,18 @@
+<m-settingsV2__header>
+  <div
+    class="m-settingsV2__headerLabel"
+    i18n="@@SETTINGS__ACCOUNT__LANGUAGE__LABEL"
+  >
+    Language Settings
+  </div>
+  <div
+    class="m-settingsV2__desc"
+    i18n="@@SETTINGS__ACCOUNT__LANGUAGE__DESCRIPTION"
+  >
+    Change your preferred language and, if available, the web interface display.
+  </div>
+</m-settingsV2__header>
+
 <div class="m-formWrapper">
   <form *ngIf="form" [formGroup]="form" class="m-formLayout--buttonRight">
     <div class="m-form__fieldsContainer">
