--- a/src/app/modules/settings-v2/billing/payment-methods/payment-methods.component.html
+++ b/src/app/modules/settings-v2/billing/payment-methods/payment-methods.component.html
@@ -1,3 +1,18 @@
+<m-settingsV2__header>
+  <div
+    class="m-settingsV2__headerLabel"
+    i18n="@@SETTINGS__BILLING__METHOD__LABEL"
+  >
+    Payment Methods
+  </div>
+  <div
+    class="m-settingsV2__desc"
+    i18n="@@SETTINGS__BILLING__METHOD__DESCRIPTION"
+  >
+    Manage credit cards associated with your Minds account.
+  </div>
+</m-settingsV2__header>
+
 <div *ngIf="!init" style="width:100%; text-align:center;">
   <div
     class="mdl-spinner mdl-js-spinner is-active"
