--- a/src/app/modules/settings-v2/billing/recurring-payments/recurring-payments.component.html
+++ b/src/app/modules/settings-v2/billing/recurring-payments/recurring-payments.component.html
@@ -1,3 +1,18 @@
+<m-settingsV2__header>
+  <div
+    class="m-settingsV2__headerLabel"
+    i18n="@@SETTINGS__BILLING__RECURRING__LABEL"
+  >
+    Recurring Payments
+  </div>
+  <div
+    class="m-settingsV2__desc"
+    i18n="@@SETTINGS__BILLING__RECURRING__DESCRIPTION"
+  >
+    Track recurring payments you make to support other channels.
+  </div>
+</m-settingsV2__header>
+
 <div *ngIf="!init" style="width:100%; text-align:center;">
   <div
     class="mdl-spinner mdl-js-spinner is-active"
