--- a/src/app/modules/settings-v2/pro/theme/theme.component.html
+++ b/src/app/modules/settings-v2/pro/theme/theme.component.html
@@ -1,12 +1,15 @@
-<div
-  class="m-settingsV2__desc"
-  i18n="@@SETTINGSV2_HASHTAGS__SETUP_SITE_COLOR_THEME"
->
-  Set up your site's color theme.
-  <a class="m-form__upgradeLink" routerLink="/pro" *ngIf="!isActive"
-    >Upgrade to Pro</a
-  >
-</div>
+<m-settingsV2__header>
+  <div class="m-settingsV2__headerLabel" i18n="@@SETTINGS__PRO__THEME__LABEL">
+    Theme
+  </div>
+  <div class="m-settingsV2__desc" i18n="@@SETTINGS__PRO__THEME__DESCRIPTION">
+    Set up your site's color theme.
+    <a class="m-form__upgradeLink" routerLink="/pro" *ngIf="!isActive"
+      >Upgrade to Pro</a
+    >
+  </div>
+</m-settingsV2__header>
+
 <form *ngIf="form" [formGroup]="form" class="m-formLayout--buttonRight">
   <div class="m-form__fieldsContainer">
     <div class="m-form__field--color hasValidationRow">
