--- a/src/app/modules/comments/thread/thread.component.html
+++ b/src/app/modules/comments/thread/thread.component.html
@@ -80,6 +80,7 @@
       (delete)="delete(i)"
       (saved)="edited(i, $event)"
       (onReply)="reply($event.comment)"
+      [newDesign]="newDesign"
     ></m-comment>
   </ng-container>
 
