--- a/src/app/modules/comments/tree/tree.component.html
+++ b/src/app/modules/comments/tree/tree.component.html
@@ -9,6 +9,7 @@
     [limit]="limit"
     [scrollable]="scrollable"
     [conversation]="conversation"
+    [newDesign]="newDesign"
   >
   </m-comments__thread>
 </ng-container>
