--- a/src/app/modules/suggestions/channel/sidebar.component.html
+++ b/src/app/modules/suggestions/channel/sidebar.component.html
@@ -95,3 +95,13 @@
     >See more</a
   >
 </m-sidebarWidget>
+
+<!-- The below is hack because angular does not extract $localize strings-->
+<ng-container *ngIf="false">
+  <ng-container i18n="@@SUGGESTIONS__CHANNEL__TITLE">
+    Suggested Channels
+  </ng-container>
+  <ng-container i18n="@@SUGGESTIONS__GROUP__TITLE">
+    Suggested Groups
+  </ng-container>
+</ng-container>
