Added in front-end for horizontal search carousel for users and groups #2899

--- a/src/app/modules/discovery/search/search.component.html
+++ b/src/app/modules/discovery/search/search.component.html
@@ -48,6 +48,11 @@
       ><span i18n="@@DISCOVERY_SEARCH__BACK">Back</span>
     </a>
   </div>
+  <div class="m-discoveryFeeds__carouselContainer">
+    <m-discovery__carousel
+      *mIfFeature="'discovery-carousel'"
+    ></m-discovery__carousel>
+  </div>
 
   <div class="m-discoveryFeeds__feed">
     <m-discovery__feedItem
