--- a/src/app/modules/channels/v2/feed/feed.component.html
+++ b/src/app/modules/channels/v2/feed/feed.component.html
@@ -39,7 +39,14 @@
     <div class="m-pageLayoutPane__inner">
       <div class="m-pageLayoutPane__sticky" m-stickySidebar>
         <m-channelAbout__brief></m-channelAbout__brief>
-        <m-channelShop__brief *mIfBrowser></m-channelShop__brief>
+        <ng-container *mIfBrowser>
+          <m-channelShop__brief
+            *mIfFeature="'support-tiers'; else wireRewardsBrief"
+          ></m-channelShop__brief>
+          <ng-template #wireRewardsBrief>
+            <m-channelShop__briefWireRewards></m-channelShop__briefWireRewards>
+          </ng-template>
+        </ng-container>
       </div>
     </div>
   </div>
