--- a/src/app/modules/homepage-v2/homepage-v2.component.html
+++ b/src/app/modules/homepage-v2/homepage-v2.component.html
@@ -19,8 +19,10 @@
           {{ headline }}
         </h2>
 
-        <p class="m-marketing__description">
-          {{ description }}
+        <p class="m-marketing__description" i18n="@@HOMEPAGE__V2__SUBHEADER">
+          A place to have open conversations and bring people together. Free
+          your mind and get paid for creating content, driving traffic and
+          referring friends.
         </p>
 
         <button
