--- a/src/app/modules/search/bar.component.html
+++ b/src/app/modules/search/bar.component.html
@@ -39,3 +39,9 @@
     [disabled]="suggestionsDisabled"
   ></m-search--bar-suggestions>
 </div>
+
+<!-- Hack because $localize doesn't work in ts files -->
+<ng-container *ngIf="false">
+  <ng-container i18n="@@COMMON__SEARCH">Search Minds</ng-container>
+  <ng-container i18n="@@COMMON__SEARCH__SHORT">Search</ng-container>
+</ng-container>
