Seperating out carousel into common folder

--- a/src/app/modules/discovery/search/search.component.html
+++ b/src/app/modules/discovery/search/search.component.html
@@ -49,9 +49,7 @@
     </a>
   </div>
   <div class="m-discoveryFeeds__carouselContainer">
-    <m-discovery__carousel
-      *mIfFeature="'discovery-carousel'"
-    ></m-discovery__carousel>
+    <m-carousel *mIfFeature="'discovery-carousel'"></m-carousel>
   </div>
 
   <div class="m-discoveryFeeds__feed">
