--- a/src/app/modules/layout/page/page.component.html
+++ b/src/app/modules/layout/page/page.component.html
@@ -42,6 +42,7 @@
 <m-hovercard-popup></m-hovercard-popup>
 
 <m-overlay-modal></m-overlay-modal>
+<m-stackableModal></m-stackableModal>
 
 <m--blockchain--transaction-overlay></m--blockchain--transaction-overlay>
 
