--- a/src/app/common/components/stackable-modal/stackable-modal.component.html
+++ b/src/app/common/components/stackable-modal/stackable-modal.component.html
@@ -1,10 +1,3 @@
-<div
-  class="m-overlayModal--stackable m-overlay-modal"
-  [ngClass]="class"
-  [hidden]="hidden"
->
+<div class="m-stackableModal" [hidden]="hidden">
   <ng-template dynamic-host></ng-template>
-  <a class="m-overlay-modal--close"
-    ><i class="material-icons" (click)="dismiss()">close</i>
-  </a>
 </div>
