--- a/src/app/modules/channels/v2/channel.component.html
+++ b/src/app/modules/channels/v2/channel.component.html
@@ -26,7 +26,7 @@
           >
         </div>
 
-        <div class="m-tabs__tab" *ngIf="false">
+        <div class="m-tabs__tab" *mIfFeature="'support-tiers'">
           <a
             [routerLink]="['/', username, 'shop']"
             routerLinkActive="m-tabs__tab--selected"
