--- a/src/app/modules/pro/channel/tiles/media/tile.component.html
+++ b/src/app/modules/pro/channel/tiles/media/tile.component.html
@@ -2,7 +2,7 @@
   [entity]="entity"
   [displayOptions]="{
     fixedHeight: false,
-    showComments: false,
+    showComments: true,
     showOwnerBlock: true
   }"
 ></m-activity>
